Add YangParserConfiguration
We are heading towards more flexible parser, where some features can be
enabled or disabled. To support that world we need some sort of a
configuration object. This patch introduces such a concept.

JIRA: YANGTOOLS-1193
Change-Id: I7763df6615348d87044646fef46ff0dfda744436
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>